colors for the buttons have been changed

--- a/css/design.css
+++ b/css/design.css
@@ -2,8 +2,8 @@
 #calc-contain{
   position: relative;
   width: 400px;
-  border: 2px solid black;
-  border-radius: 12px;
+  border: 2px solid #000099;
+  border-radius: 15px;
   margin: 0px auto;
   padding: 20px 20px 100px 20px;
 }
@@ -17,7 +17,7 @@
   font-weight: 900;
 }
 input[type=button] {
-  background: lightGray;
+  background:black;
   width: 20%;
   font-size: 20px;
   font-weight: 900;
@@ -42,5 +42,5 @@ input[type = text] {
   margin: 5px auto;
   font-size: 20px;
   padding: 10px;
-  box-shadow: 4px 0px 12px black inset;
+  box-shadow: 4px 0px 12px white inset;
 }
