--- a/css/design.css
+++ b/css/design.css
@@ -1,11 +1,15 @@
 
+
+body {background-color:lightcoral;}
+
 #calc-contain{
   position: relative;
   width: 400px;
-  border: 2px solid #000099;
+  border: 2px solid darkgray;
   border-radius: 15px;
   margin: 0px auto;
   padding: 20px 20px 100px 20px;
+  background-color:cornsilk;
 }
 #agh{
   position: relative;
