--- a/cargame/css/style.css
+++ b/cargame/css/style.css
@@ -3,49 +3,55 @@ img {
     position: relative;
     left: 10px;
 }
-#score
+#scoreboard
+{
+    display: flex;
+    justify-content: space-evenly;
+    font-family: cursive;
+    font-size: 4vh;
+}
+/* #score
 {
 
-    position:relative;
-    top:89px;
-    left:250px;
+    position: relative;
+    top: 10vh;
+    left: 7vh;
     font-family: cursive;
-    font-size:60px;
+    font-size: 6vh;
    
 }
 #scorebox
 {
 
-    position:relative;
-    top:150px;
-    left:452px;
+    position: relative;
+    top: 17vh;
+    left: 26vh;
     size: 50px;
-    height:20px;
-   
+    height: 4vh;
 }
+
 #bestscore
 {
 
-    position:relative;
-    top:8px;
-    left: 800px;
-    font-size: 60px;
+    position: relative;
+    top: 10vh;
+    left: 60vh;
+    font-size: 6vh;
     font-family: cursive;
-   
 }
 #bestscorebox
 {
 
-    position:relative;
-    top:150px;
-    left:965px;
+    position: relative;
+    top: 10vh;
+    left: 72vh;
     size: 50px;
-   height:20px;
-}
+    height: 4vh;
+} */
 #play-ground {
     height: 60vh;
     width: 60vw;
-    margin: 20px auto;
+    margin: 25vh auto;
     margin-top: 50px;
     margin-bottom: 10px;
     border: 2px solid yellow;
